--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link rel="stylesheet" href="public/css/main.css"> 
-    <link href="public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="public/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -144,8 +144,8 @@
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="public/js/main.js"></script>
+    <script src="js/main.js"></script>
 
-    <script src="public/js/getData.js"></script>
+    <script src="js/getData.js"></script>
 </body>
 </html>
