fixed the search input size and added the delete function

--- a/public/main.html
+++ b/public/main.html
@@ -34,10 +34,10 @@
 <body class="main-container">
     <div class="container-xxl position-relative bg-white d-flex p-0">
         <!-- Content Start -->
-        <div class="container-fluid p-4">
+        <div class="container-fluid p-4"> 
             <div class="d-flex align-items-center justify-content-between">
-                <h1 class="mb-0">Borrow/Return</h1>
-                <img alt="company_logo" style="width: 6rem; height:5rem;" src="https://resources.wobbjobs.com/companies/dc12c743-0503-48f2-9de6-06e77afe86a4/company_logo/original/ff7831ca-f487-49fb-b42c-cdf8a3afa5ce-135022_125977760797969_1688052_o.jpg">
+                <h1 class="mb-0">Borrow/Return</h1> 
+                <a href="main.html"><img alt="company_logo" style="width: 6rem; height:5rem;" src="https://resources.wobbjobs.com/companies/dc12c743-0503-48f2-9de6-06e77afe86a4/company_logo/original/ff7831ca-f487-49fb-b42c-cdf8a3afa5ce-135022_125977760797969_1688052_o.jpg"></a>
             </div>
             <!-- Enter Info Start-->
             <div class="bg-light rounded align-items-left justify-content-left p-4">
@@ -55,11 +55,10 @@
                         <input type="date" placeholder="Select the date" class="input-box" id="date-input" required>
                     </div>
                     <div class="mb-3">
-                        <label class="label-text">Remarks: </label>
+                        <label class="label-text">Remarks: </label> 
                         <input type="text" placeholder="Enter remarks" class="input-box" id="remarks-input">
                     </div>
                 </div>
-                <!-- <button onclick="getInputData()" class="btn btn-primary" id="comfirm-btn">Comfirm</button> -->
                 <button class="btn btn-primary" id="comfirm-btn">Comfirm</button>
                 <div class="btn-container">
                     <button id="save-btn" class="btn btn-primary" style="display: none;">Save</button>
