--- a/public/main.html
+++ b/public/main.html
@@ -12,7 +12,7 @@
     <link href="css/style.css" rel="stylesheet"> 
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- <link href="img/favicon.ico" rel="icon"> -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,10 +46,21 @@
                         <label class="label-text">Name: </label>
                         <input type="text" placeholder="Enter your name" class="input-box" id="name-input" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 d-flex align-items-center">
                         <label class="label-text">Item's Name: </label>
-                        <input type="text" placeholder="Enter the item" class="input-box" id="item-input" required>
+                        <div class="d-flex flex-grow-1 align-items-center item-container">
+                            <input type="text" placeholder="Enter the item" class="input-box-item" id="item-input" required>
+                            <button class="btn btn-primary ms-2" id="photo-btn"><i class="fa-solid fa-camera"></i></button>
+                        </div>
                     </div>
+                    <!-- Photo elements -->
+                     <div class="mb-3">
+                        <video id="video" style="display:none;"></video>
+                        <canvas id="canvas" style="display:none;"></canvas>
+                        <button class="btn btn-primary" id="take-photo-btn" style="display:none;"><i class="fa-solid fa-camera-retro"></i></button>
+                        <input type="text" id="photo-input-url" style="display: none;">
+                    </div>
+                    <!-- Photo elements -->
                     <div class="mb-3">
                         <label class="label-text">Date Return: </label>
                         <input type="date" placeholder="Select the date" class="input-box" id="date-input" required>
