--- a/public/main.html
+++ b/public/main.html
@@ -54,6 +54,7 @@
                             <input type="file" id="photo-input-url" accept="image/*" capture="environment" style="display: none;">
                             <button class="btn btn-primary ms-2" id="photo-btn"><i class="fa-solid fa-camera"></i></button>
                         </div>
+                        <img id="itemPhotoImg" scr="" alt="Item photo" class="item-photo-img" style="display: none;">
                     </div>
                     <!-- Photo elements -->
                      <!-- <div class="mb-3" style="display: none;" id="photo-container">
