add a new input to store the data url

--- a/public/main.html
+++ b/public/main.html
@@ -51,10 +51,11 @@
                         <div class="d-flex flex-grow-1 align-items-center item-container">
                             <input type="text" placeholder="Enter the item" class="input-box-item" id="item-input" required>
                             <!-- <button class="btn btn-primary ms-2" id="photo-btn"><i class="fa-solid fa-camera"></i></button> -->
-                            <input type="file" id="photo-input-url" accept="image/*" capture="environment" style="display: none;">
+                            <input type="text" id="photo-input-url" style="display: none;">
+                            <input type="file" id="take-photo-input" accept="image/*" capture="environment" style="display: none;">
                             <button class="btn btn-primary ms-2" id="photo-btn"><i class="fa-solid fa-camera"></i></button>
                         </div>
-                        <img id="itemPhotoImg" scr="" alt="Item photo" class="item-photo-img" style="display: none;">
+                        <br><img id="itemPhotoImg" scr="" alt="Item photo" class="item-photo-img" style="display: none;">
                     </div>
                     <!-- Photo elements -->
                      <!-- <div class="mb-3" style="display: none;" id="photo-container">
