--- a/public/key.html
+++ b/public/key.html
@@ -6,11 +6,8 @@
             <label class="mb-1 label-text">Key:</label>
             <input type="email" placeholder="Enter your key" class="input-box" id="key-input" required>
         </div>
-        <div class="mb-3 row align-items-center">
-            <label class="mb-1 label-text">Key Password:</label>
-            <input type="password" placeholder="Enter key password" class="input-box" id="key-password-input" required>
-        </div>                 
         <div class="mt-5">
+            <button class="login-btn" id="cancel-btn">Cancel</button>
             <button class="btn btn-primary" id="comfirm-key-btn">Comfirm</button>
         </div>
     </div>
