--- a/public/signup.html
+++ b/public/signup.html
@@ -4,15 +4,17 @@
         <label class="header-text m-5">Sign Up</label>
         <div class="mb-3 row align-items-center">
             <label class="mb-1 label-text">Email:</label>
-            <input type="email" placeholder="Enter your email" class="input-box" id="email-input" required>
+            <input type="email" placeholder="abc@example.com" class="input-box" id="signup-email-input" required>
+            <label class="error-prompt" id="error-email" style="display: none;">Invalid email.</label>
         </div>
         <div class="mb-3 row align-items-center">
             <label class="mb-1 label-text">Password:</label> 
-            <input type="password" placeholder="Enter your password" class="input-box" id="password-input" required>
-        </div>                 
+            <input type="password" placeholder="Enter your password" class="input-box" id="signup-password-input" required>
+            <label class="error-prompt" id="error-password" style="display: none;">Password must be at least 8 characters long, including at least 1 uppercase and lowercase letter, 1 number, and 1 special character.</label>
+        </div>      
         <div class="mt-5">
-            <button class="btn btn-primary" id="comfirm-signup-btn">Comfirm</button>
+            <button class="btn btn-primary" id="signup-comfirm-btn">Comfirm</button>
         </div>
     </div>
-</div>
+</div> 
 <!-- Sign Up End-->
