--- a/public/main.html
+++ b/public/main.html
@@ -31,6 +31,14 @@
 </head>
 <body class="main-container">
     <div class="container-xxl position-relative d-flex p-0">
+        <!-- Spinner Start -->
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+        <!-- Spinner End -->
+         
         <!-- Content Start -->
         <div class="container-fluid p-4"> 
             <!-- Header Start-->
