finish with google sign in and inventory backend

--- a/public/signup.html
+++ b/public/signup.html
@@ -15,6 +15,12 @@
         <div class="mt-5">
             <button class="btn btn-primary" id="signup-comfirm-btn">Comfirm</button>
         </div>
+
+        <!-- Google Sign-Up Button -->
+        <div class="mt-3">
+            <button class="login-btn" id="google-signup-btn">Sign In with Google</button>
+        </div>
+
     </div>
 </div> 
 <!-- Sign Up End-->
