--- a/public/login.html
+++ b/public/login.html
@@ -12,12 +12,17 @@
             <label class="error-prompt" id="error-message" style="display: none;">Incorrect email or password.</label>
         </div>                 
         <div class="mt-5">
+            <button class="login-btn" id="signup-btn">Sign Up</button>
             <button class="btn btn-primary" id="login-comfirm-btn">Comfirm</button>
         </div>
-        
+
+        <div class="mt-3">
+            <span class="or-text">or</span>
+        </div>
+
         <!-- Google Sign-Up Button -->
         <div class="mt-3">
-            <button class="login-btn" id="google-signup-btn">Sign In with Google</button>
+            <button class="google-login-btn" id="google-signup-btn">Sign In with Google</button>
         </div>
     </div>
 </div>
