--- a/public/signup.html
+++ b/public/signup.html
@@ -16,9 +16,13 @@
             <button class="btn btn-primary" id="signup-comfirm-btn">Comfirm</button>
         </div>
 
+        <div class="mt-3">
+            <span class="or-text">or</span>
+        </div>
+
         <!-- Google Sign-Up Button -->
         <div class="mt-3">
-            <button class="login-btn" id="google-signup-btn">Sign In with Google</button>
+            <button class="google-login-btn" id="google-signup-btn">Sign In with Google</button>
         </div>
 
     </div>
