added reset password

--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,9 @@
         <div class="mb-3 row align-items-center">
             <label class="mb-1 label-text">Password:</label> 
             <input type="password" placeholder="Enter your password" class="input-box" id="login-password-input" required>
+            <div class="d-flex justify-content-end">
+                <button class="forgot-pass-btn" id="forgot-password-btn">Forgot Password?</button>
+            </div>
             <label class="error-prompt" id="error-message" style="display: none;">Incorrect email or password.</label>
         </div>                 
         <div class="mt-5">
