added filter function

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -101,9 +101,9 @@
         <button class="btn btn-primary" id="inventory-comfirm-btn">Confirm</button>
         <div class="btn-container">
             <button id="save-btn" class="btn btn-primary" style="display: none;">Save</button>
-            <button id="cancel-btn" class="cancel-btn loi" style="display: none;">Cancel</button>
+            <button id="cancel-btn" class="login-btn" style="display: none;">Cancel</button>
         </div>
-    </div>
+    </div> 
     <!-- Enter Info Start-->
 
     <div class="bg-light text-center rounded p-4">
@@ -118,10 +118,10 @@
                 <div class="dropdown-sort"> 
                     <i disabled data-bs-toggle="dropdown" class="fa-solid fa-filter fa-xl sort-button"></i>
                     <div class="dropdown-menu dropdown-menu-end border-0">
-                        <a id="allUserBtn" class="dropdown-item">All</a>
-                        <a id="returnedBtn" class="dropdown-item">Normal Stock</a>
-                        <a id="noReturnBtn" class="dropdown-item">Low Stock</a>
-                        <a id="returnedBtn" class="dropdown-item">High Stock</a>
+                        <a id="allItemBtn" class="dropdown-item">All</a>
+                        <a id="normalBtn" class="dropdown-item">Normal Stock</a>
+                        <a id="lowBtn" class="dropdown-item">Low Stock</a>
+                        <a id="overBtn" class="dropdown-item">Over Stock</a>
                     </div>
                 </div>
                 <button id="exportBtn" class="sort-button"><i class="fa-solid fa-file-arrow-down fa-xl"></i></button>    
