--- a/public/login.html
+++ b/public/login.html
@@ -4,26 +4,31 @@
         <label class="header-text m-5">Login</label>
         <div class="mb-3 row align-items-center">
             <label class="mb-1 label-text">Email:</label>
-            <input type="email" placeholder="abc@example.com" class="input-box" id="login-email-input" required>
+            <div class="position-relative w-100">
+                <input type="email" placeholder="abc@example.com" class="input-box" id="login-email-input" required>
+            </div>
         </div>
         <div class="mb-3 row align-items-center">
-            <label class="mb-1 label-text">Password:</label> 
-            <input type="password" placeholder="Enter your password" class="input-box" id="login-password-input" required>
+            <label class="mb-1 label-text">Password:</label>
+            <div class="position-relative w-100">
+                <input type="password" placeholder="Enter your password" class="input-box" id="login-password-input" required>
+                <button type="button" class="show-pass-btn" id="toggle-password-btn">
+                    <i id="toggle-password-icon" class="fa-solid fa-eye"></i>
+                </button>
+            </div>
             <div class="d-flex justify-content-end">
                 <button class="forgot-pass-btn" id="forgot-password-btn">Forgot Password?</button>
             </div>
             <label class="error-prompt" id="error-message" style="display: none;">Incorrect email or password.</label>
-        </div>                 
+        </div>                
         <div class="mt-5">
             <button class="login-btn" id="signup-btn">Sign Up</button>
-            <button class="btn btn-primary" id="login-comfirm-btn">Comfirm</button>
+            <button class="btn btn-primary" id="login-comfirm-btn">Confirm</button>
         </div>
-
         <div class="mt-3">
             <span class="or-text">or</span>
         </div>
-
-        <!-- Google Sign-Up Button -->
+        <!-- Google Sign-In Button -->
         <div class="mt-3">
             <button class="google-login-btn" id="google-signup-btn">Sign In with Google</button>
         </div>
