--- a/public/main.html
+++ b/public/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>STOCKer</title>
+    <link rel="icon" href="image/icon.svg" type="image/x-icon">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
