moved config into js folder

--- a/public/main.html
+++ b/public/main.html
@@ -77,7 +77,7 @@
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     
 
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
