added google analytics tag in main html file

--- a/public/main.html
+++ b/public/main.html
@@ -30,6 +30,17 @@
 
     
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMLHCEF9H3"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZMLHCEF9H3');
+</script>
+
 <body class="main-container">
     <div class="container-xxl position-relative d-flex p-0">
         <!-- Spinner Start -->
