--- a/public/main.html
+++ b/public/main.html
@@ -32,13 +32,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMLHCEF9H3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YGT2DTD3XH"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-ZMLHCEF9H3');
+    gtag('config', 'G-YGT2DTD3XH');
 </script>
 
 <body class="main-container">
