added vercel speed insights code

--- a/public/main.html
+++ b/public/main.html
@@ -90,5 +90,9 @@
 
     <script src="js/config.js"></script>
     <script type="module" src="js/main.js"></script>
+    <script type="module">
+        import { injectSpeedInsights } from "https://cdn.vercel-insights.com/v1/script.js";
+        injectSpeedInsights();
+    </script>
 </body>
 </html>
