--- a/public/main.html
+++ b/public/main.html
@@ -90,9 +90,9 @@
 
     <script src="js/config.js"></script>
     <script type="module" src="js/main.js"></script>
-    <script type="module">
-        import { injectSpeedInsights } from "https://cdn.vercel-insights.com/v1/script.js";
-        injectSpeedInsights();
-    </script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+      </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
