--- a/public/main.html
+++ b/public/main.html
@@ -90,13 +90,16 @@
 
     <script src="js/config.js"></script>
     <script type="module" src="js/main.js"></script>
+    <script type="module">
+        import { injectSpeedInsights } from "https://cdn.vercel-insights.com/v1/script.js";
+        injectSpeedInsights();
+        console.log("Check link to vercel 1.")
+    </script>      
     <script>
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+        console.log("Check link to vercel 2.");
       </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script>
-        window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-      </script>
     <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 </html>
