--- a/public/main.html
+++ b/public/main.html
@@ -90,10 +90,12 @@
 
     <script src="js/config.js"></script>
     <script type="module" src="js/main.js"></script>
-    <script type="module">
-        import { injectSpeedInsights } from "https://cdn.vercel-insights.com/v1/script.js";
-        injectSpeedInsights();
-        console.log("Check link to vercel 1.")
-    </script>      
+    <script>
+        window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+        console.log("check link to vercel")
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+    <script defer src="https://cdn.vercel-insights.com/script.js"></script>       
+    <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
 </body>
 </html>
