--- a/public/main.html
+++ b/public/main.html
@@ -89,10 +89,10 @@
     
 
     <script src="js/config.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="api/main.js"></script>
     <script>
         window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-        console.log("check link to vercel")
+        console.log("check link to vercel");
     </script>
     <script defer src="/_vercel/speed-insights/script.js"></script>
     <script defer src="https://cdn.vercel-insights.com/script.js"></script>       
